fix: change overlap of login background into home

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,25 +1,18 @@
-body {
+.login-container {
     background-image: url('@assets/login/bg_dark.png');
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 .login-card {
     padding: 0 1.6rem 0 1.6rem;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-}
-
-.login-card::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     backdrop-filter: blur(5px);
     background-color: rgba(23, 23, 23, 0.8);
-    z-index: -1;
 }
 
 .login-card--logo {
